fixed post issues
