# API/api/swagger/swagger.yaml
@@ -279,7 +279,7 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
             
-  /users/{uuid}/list/save:
+  /users/list/save:
     x-swagger-router-controller: users
     x-volos-authorizations: {}
     x-volos-apply: {}
@@ -288,11 +288,6 @@ paths:
       description: Create new list under a user
       operationId: postList
       parameters:
-        - name: uuid
-          in: path
-          description: User account id
-          required: true
-          type: string
         - name: list
           in: body
           description: Post list data
